added exit/enter between farm and map