@@ -34,7 +34,7 @@ public class MapController {
                     )){
                         player.setPlayerIsInVillage(true);
                         player.setX(App.getGame().getVillage().getStartPoints().getFirst().getX());
-                        player.setY(App.getGame().getVillage().getStartPoints().getFirst().getY());
+                        player.setY(App.getGame().getVillage().getStartPoints().get(0).getY());
                         System.out.println("going to village..");
                         System.out.println("rn on "+player.getX()+" "+player.getY());
                         break;
@@ -44,8 +44,8 @@ public class MapController {
                             Finder.findCellByCoordinatesVillage(x, y, App.getGame().getVillage())
                     )){
                         player.setPlayerIsInVillage(false);
-                        player.setX(App.getGame().getCurrentPlayerFarm().getStartPoints().getFirst().getX());
-                        player.setY(App.getGame().getCurrentPlayerFarm().getStartPoints().getFirst().getY());
+                        player.setX(App.getGame().getCurrentPlayerFarm().getStartPoints().get(0).getX());
+                        player.setY(App.getGame().getCurrentPlayerFarm().getStartPoints().get(0).getY());
                         System.out.println("going to farm ...");
                         System.out.println("rn on "+player.getX()+" "+player.getY());
                         break;
